--- a/calendar.html
+++ b/calendar.html
@@ -346,7 +346,7 @@
           // We'll store the push key as "id" so we know how to remove it
           id: bookingId,
           // e.g. "06:00 Booked by: user"
-          title: `${b.startTime} Booked by: ${b.userName || "Unknown"}`,
+          title: `@ ${b.startTime}`,
           start: b.startTimeISO,
           end: b.endTimeISO,
           // We'll keep track of the booking creator email in extendedProps
@@ -391,7 +391,11 @@
       const endStr = ev.end.toLocaleString();
 
       // We'll show the basic text
-      item.textContent = `${ev.title} | Start: ${startStr} | End: ${endStr}`;
+      item.innerHTML = `
+        <strong>${ev.extendedProps.creatorEmail}</strong><br>
+        Start: ${startStr}<br>
+        End: ${endStr}
+      `;
 
       // Now let's add a "Remove" button. Only show it if current user is the booking's creator
       const creator = (ev.extendedProps.creatorEmail || '').toLowerCase();
