--- a/calendar.html
+++ b/calendar.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <!-- FullCalendar CSS -->
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.css" rel="stylesheet">
+  <!--custom external stylesheet -->
+  <link rel="stylesheet" href="style.css">
 
+  
   <style>
     /* BASIC PAGE STYLES */
     body {
