--- a/calendar.html
+++ b/calendar.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8" />
   <title>Fleet Calendar (Multi-Vehicle + NFC One-Sticker Method)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  
   <!-- FullCalendar CSS -->
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.css" rel="stylesheet">
-  <!--custom external stylesheet -->
+  
+  <!-- Your custom external stylesheet -->
   <link rel="stylesheet" href="style.css">
 
-  
   <style>
+    /* Your existing internal styles (you can keep them or move some to style.css) */
+  </style>
     /* BASIC PAGE STYLES */
     body {
       margin: 0; padding: 0;
