--- a/calendar.html
+++ b/calendar.html
@@ -165,12 +165,12 @@
         End Time (6AM - 9PM):
         <input type="time" id="booking-end" value="07:00" min="06:00" max="21:00" />
       </label>
-      <button type="submit" id="bookVehicleBtn">Book Vehicle</button>
+      <button type="submit" id="bookVehicleBtn" class="action-button">Book Vehicle</button>
     </form>
 
     <!-- SIGN OUT & RETURN BUTTONS -->
-    <button id="signOutBtn">Sign Out Selected Vehicle Now</button>
-    <button id="returnVehicleBtn">Return Vehicle Now</button>
+    <button id="signOutBtn" class="action-button">Sign Out Selected Vehicle Now</button>
+    <button id="returnVehicleBtn" class="action-button">Return Vehicle Now</button>
   </div>
 
   <!-- CALENDAR + DETAILS WRAPPER -->
