--- a/calendar.html
+++ b/calendar.html
@@ -124,7 +124,7 @@
 </header>
 
 <div class="container">
-  <h2>Multi-Vehicle Calendar</h2>
+  <h2>YFNED Fleet Calendar</h2>
   
   <!-- VEHICLE SELECT DROPDOWN -->
   <div class="vehicle-select-container">
