--- a/calendar.html
+++ b/calendar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Fleet Calendar (Multi-Vehicle + NFC One-Sticker Method)</title>
+  <title>Fleet Calendar (YFNED Fleet + NFC One-Sticker Method)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   
   <!-- FullCalendar CSS -->
