--- a/nfc.html
+++ b/nfc.html
@@ -9,134 +9,147 @@
     body {
       font-family: sans-serif;
       text-align: center;
-      background-color: #5cbde5;
-      color: #fff;
       padding: 2rem;
+      background-color: #5cbde5;
     }
-
-    h1 {
-      font-size: 2rem;
+    #main-content {
+      display: none;
+      margin-top: 2rem;
     }
-
-    #vehicle-status {
-      margin: 1rem 0;
-      font-size: 1.2rem;
+    #vehicle-name {
+      font-size: 1.5rem;
+      font-weight: bold;
     }
-
     button {
-      padding: 1rem 2rem;
       font-size: 1.2rem;
-      margin: 1rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
+      padding: 1rem 2rem;
+      margin-top: 2rem;
+      font-weight: bold;
     }
-
-    #signOutBtn {
-      background-color: #007bff;
-      color: white;
-    }
-
-    #returnBtn {
-      background-color: #28a745;
-      color: white;
+    #message {
+      margin-top: 1rem;
+      font-weight: bold;
+      color: darkred;
     }
   </style>
 </head>
 <body>
-  <h1>Checking Vehicle...</h1>
-  <div id="vehicle-status"></div>
-  <button id="signOutBtn" style="display:none;">Sign Out Vehicle</button>
-  <button id="returnBtn" style="display:none;">Return Vehicle</button>
 
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
-    import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
-    import { getDatabase, ref, get, update, push, set } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
+<h1>YFNED Vehicle Access via NFC</h1>
+<p id="auth-status">Checking login...</p>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
-      authDomain: "yfned-fleet-nfc.firebaseapp.com",
-      databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
-      projectId: "yfned-fleet-nfc",
-      storageBucket: "yfned-fleet-nfc.firebasestorage.app",
-      messagingSenderId: "482363667898",
-      appId: "1:482363667898:web:4b0364e891a221e9631983"
-    };
+<div id="main-content">
+  <div id="vehicle-name"></div>
+  <button id="actionBtn"></button>
+  <div id="message"></div>
+</div>
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getDatabase(app);
+<script type="module">
+  import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
+  import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
+  import { getDatabase, ref, get, update, push, set } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
 
-    const urlParams = new URLSearchParams(window.location.search);
-    const vehicleName = urlParams.get('nfcVehicle');
+  const firebaseConfig = {
+    apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
+    authDomain: "yfned-fleet-nfc.firebaseapp.com",
+    databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
+    projectId: "yfned-fleet-nfc",
+    storageBucket: "yfned-fleet-nfc.appspot.com",
+    messagingSenderId: "482363667898",
+    appId: "1:482363667898:web:4b0364e891a221e9631983",
+    measurementId: "G-LK66DQVKW4"
+  };
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getDatabase(app);
 
-    const statusText = document.getElementById('vehicle-status');
-    const signOutBtn = document.getElementById('signOutBtn');
-    const returnBtn = document.getElementById('returnBtn');
+  const urlParams = new URLSearchParams(window.location.search);
+  const vehicle = urlParams.get('vehicle');
+  const authStatus = document.getElementById('auth-status');
+  const mainContent = document.getElementById('main-content');
+  const vehicleNameEl = document.getElementById('vehicle-name');
+  const actionBtn = document.getElementById('actionBtn');
+  const messageEl = document.getElementById('message');
 
-    onAuthStateChanged(auth, async (user) => {
-      if (!user) {
-        window.location.href = "index.html";
-        return;
-      }
+  let currentUser = null;
 
-      if (!vehicleName) {
-        statusText.textContent = "No vehicle info found from NFC tag.";
-        return;
-      }
+  if (!vehicle) {
+    authStatus.textContent = 'Error: Vehicle name not specified in URL.';
+    throw new Error('Missing vehicle name in query string');
+  }
 
-      const vehicleRef = ref(db, 'vehicles/' + vehicleName);
-      const vehicleSnap = await get(vehicleRef);
+  onAuthStateChanged(auth, async (user) => {
+    if (!user) {
+      authStatus.innerHTML = `Please <a href="index.html">log in</a> to access vehicle.`;
+    } else {
+      currentUser = user;
+      authStatus.style.display = 'none';
+      mainContent.style.display = 'block';
+      vehicleNameEl.textContent = `Vehicle: ${vehicle}`;
 
-      if (!vehicleSnap.exists()) {
-        statusText.textContent = `${vehicleName} not found in database.`;
-        return;
-      }
+      await checkVehicleStatusAndRender(vehicle);
+    }
+  });
 
-      const vehicleData = vehicleSnap.val();
+  async function checkVehicleStatusAndRender(vehicleName) {
+    const vehicleRef = ref(db, 'vehicles/' + vehicleName);
+    const snap = await get(vehicleRef);
 
-      if (vehicleData.status === 'signedOut') {
-        if (vehicleData.CurrentlySignedOutBy === user.email) {
-          statusText.innerHTML = `You currently have the <strong>${vehicleName}</strong> signed out.`;
-          returnBtn.style.display = 'inline-block';
-        } else {
-          statusText.innerHTML = `<strong>${vehicleName}</strong> is currently signed out by someone else.`;
-        }
-      } else {
-        statusText.innerHTML = `<strong>${vehicleName}</strong> is available.`;
-        signOutBtn.style.display = 'inline-block';
-      }
+    if (!snap.exists()) {
+      messageEl.textContent = 'Vehicle not found in database.';
+      actionBtn.style.display = 'none';
+      return;
+    }
 
-      signOutBtn.addEventListener('click', async () => {
-        await update(vehicleRef, {
-          status: 'signedOut',
-          CurrentlySignedOutBy: user.email
-        });
-        await logAction(vehicleName, user.email, 'signedOut');
-        alert(`You signed out the ${vehicleName}`);
-        location.reload();
-      });
+    const data = snap.val();
+    const signedOutBy = data.CurrentlySignedOutBy || null;
 
-      returnBtn.addEventListener('click', async () => {
-        await update(vehicleRef, {
-          status: 'available',
-          CurrentlySignedOutBy: null
-        });
-        await logAction(vehicleName, user.email, 'signedIn');
-        alert(`You returned the ${vehicleName}`);
-        location.reload();
-      });
+    if (data.status === 'available') {
+      actionBtn.textContent = 'Sign Out Vehicle';
+      actionBtn.onclick = () => signOutVehicle(vehicleName);
+    } else if (data.status === 'signedOut' && signedOutBy === currentUser.email) {
+      actionBtn.textContent = 'Return Vehicle';
+      actionBtn.onclick = () => returnVehicle(vehicleName);
+    } else {
+      actionBtn.style.display = 'none';
+      messageEl.textContent = `This vehicle is currently signed out by ${signedOutBy}.`;
+    }
+  }
+
+  async function signOutVehicle(vehicleName) {
+    await update(ref(db, 'vehicles/' + vehicleName), {
+      status: 'signedOut',
+      CurrentlySignedOutBy: currentUser.email
     });
 
-    async function logAction(vehicleName, userEmail, action) {
-      const logRef = push(ref(db, `vehicleLogs/${vehicleName}`));
-      await set(logRef, {
-        userEmail,
-        action,
-        timestamp: Date.now()
-      });
-    }
-  </script>
+    const logRef = push(ref(db, `vehicleLogs/${vehicleName}`));
+    await set(logRef, {
+      userEmail: currentUser.email,
+      action: 'signedOut',
+      timestamp: Date.now()
+    });
+
+    messageEl.textContent = `✅ Signed out ${vehicleName}.`;
+    actionBtn.style.display = 'none';
+  }
+
+  async function returnVehicle(vehicleName) {
+    await update(ref(db, 'vehicles/' + vehicleName), {
+      status: 'available',
+      CurrentlySignedOutBy: null
+    });
+
+    const logRef = push(ref(db, `vehicleLogs/${vehicleName}`));
+    await set(logRef, {
+      userEmail: currentUser.email,
+      action: 'signedIn',
+      timestamp: Date.now()
+    });
+
+    messageEl.textContent = `✅ Returned ${vehicleName}.`;
+    actionBtn.style.display = 'none';
+  }
+</script>
+
 </body>
 </html>
