--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       color: red;
     }
   </style>
-</head>
   <link rel="stylesheet" href="style.css">
+</head>
 <body>
 
 <div class="login-container">
@@ -61,20 +61,17 @@
   import { getAuth, signInWithEmailAndPassword } 
     from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
 
-  // TODO: Replace with your Firebase config
   const firebaseConfig = {
-  apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
-  authDomain: "yfned-fleet-nfc.firebaseapp.com",
-  databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
-  projectId: "yfned-fleet-nfc",
-  storageBucket: "yfned-fleet-nfc.firebasestorage.app",
-  messagingSenderId: "482363667898",
-  appId: "1:482363667898:web:4b0364e891a221e9631983",
-  measurementId: "G-LK66DQVKW4"
-};
+    apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
+    authDomain: "yfned-fleet-nfc.firebaseapp.com",
+    databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
+    projectId: "yfned-fleet-nfc",
+    storageBucket: "yfned-fleet-nfc.firebasestorage.app",
+    messagingSenderId: "482363667898",
+    appId: "1:482363667898:web:4b0364e891a221e9631983",
+    measurementId: "G-LK66DQVKW4"
+  };
 
-
-  // Initialize Firebase
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
 
@@ -83,20 +80,29 @@
   const passInput = document.getElementById('login-password');
   const msgDiv = document.getElementById('message');
 
-  // Handle Login
+  // Read the vehicle param from the URL if present
+  const urlParams = new URLSearchParams(window.location.search);
+  const vehicleParam = urlParams.get('vehicle');
+
   loginBtn.addEventListener('click', async () => {
     msgDiv.textContent = '';
     const email = emailInput.value;
     const pass = passInput.value;
-    if(!email || !pass) {
+    if (!email || !pass) {
       msgDiv.textContent = 'Please enter email and password.';
       return;
     }
+
     try {
       await signInWithEmailAndPassword(auth, email, pass);
-      // If successful, redirect to calendar
-      window.location.href = 'calendar.html';
-    } catch(err) {
+
+      // Redirect based on whether this login came from an NFC tag
+      if (vehicleParam) {
+        window.location.href = `nfc.html?vehicle=${encodeURIComponent(vehicleParam)}`;
+      } else {
+        window.location.href = 'calendar.html';
+      }
+    } catch (err) {
       msgDiv.textContent = 'Login failed: ' + err.message;
     }
   });
