--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -2,68 +2,105 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>FleetMaster Control Panel</title>
+  <title>Fleetmaster Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
+      background-color: #5cbde5;
       font-family: sans-serif;
-      background-color: #e6f0f5;
-      padding: 2rem;
+      margin: 0;
+      padding: 0;
     }
-    h1 {
+
+    header {
+      background: #333;
+      color: white;
+      padding: 1rem;
       text-align: center;
-      color: #004d66;
+      font-size: 1.5rem;
     }
-    table {
-      width: 100%;
-      max-width: 800px;
-      margin: auto;
-      border-collapse: collapse;
+
+    .container {
+      max-width: 900px;
+      margin: 2rem auto;
       background: white;
+      padding: 2rem;
+      border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
+
+    h2 {
+      text-align: center;
+      margin-top: 0;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+    }
+
     th, td {
       padding: 1rem;
-      border-bottom: 1px solid #ddd;
       text-align: left;
+      border-bottom: 1px solid #ddd;
     }
-    th {
-      background-color: #5cbde5;
-      color: white;
-    }
-    button {
+
+    .toggle-btn {
       padding: 0.5rem 1rem;
-      font-weight: bold;
       border: none;
-      border-radius: 5px;
+      border-radius: 4px;
       cursor: pointer;
+      font-weight: bold;
     }
-    .front {
-      background-color: #ffc107;
-    }
-    .with {
-      background-color: #28a745;
+
+    .atFrontDesk {
+      background-color: #f5a623;
       color: white;
+    }
+
+    .withStaff {
+      background-color: #2ecc71;
+      color: white;
+    }
+
+    #logout-btn {
+      float: right;
+      background: #666;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-top: -2.5rem;
     }
   </style>
 </head>
 <body>
 
-<h1>FleetMaster: Key Control Panel</h1>
-<table>
-  <thead>
-    <tr>
-      <th>Vehicle</th>
-      <th>Key Status</th>
-    </tr>
-  </thead>
-  <tbody id="vehicle-table-body"></tbody>
-</table>
+<header>
+  YFNED Fleetmaster Controls
+  <button id="logout-btn">Logout</button>
+</header>
+
+<div class="container">
+  <h2>Vehicle Key Handoff Status</h2>
+  <table id="vehicle-table">
+    <thead>
+      <tr>
+        <th>Vehicle Name</th>
+        <th>Key Status</th>
+        <th>Toggle</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
 
 <script type="module">
   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
   import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
-  import { getDatabase, ref, get, update, onValue } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
+  import { getDatabase, ref, get, update } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
 
   const firebaseConfig = {
     apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
@@ -72,58 +109,55 @@
     projectId: "yfned-fleet-nfc",
     storageBucket: "yfned-fleet-nfc.appspot.com",
     messagingSenderId: "482363667898",
-    appId: "1:482363667898:web:4b0364e891a221e9631983",
-    measurementId: "G-LK66DQVKW4"
+    appId: "1:482363667898:web:4b0364e891a221e9631983"
   };
 
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
   const db = getDatabase(app);
 
-  const tableBody = document.getElementById('vehicle-table-body');
+  const logoutBtn = document.getElementById('logout-btn');
+  logoutBtn.addEventListener('click', () => signOut(auth));
 
-  onAuthStateChanged(auth, async (user) => {
+  const tableBody = document.querySelector('#vehicle-table tbody');
+
+  onAuthStateChanged(auth, async user => {
     if (!user) {
       window.location.href = 'index.html';
-      return;
+    } else {
+      const vehiclesRef = ref(db, 'vehicles');
+      const snap = await get(vehiclesRef);
+      if (snap.exists()) {
+        const vehicles = snap.val();
+        Object.keys(vehicles).forEach(name => {
+          const { keyStatus = 'atFrontDesk' } = vehicles[name];
+          const row = document.createElement('tr');
+
+          const nameCell = document.createElement('td');
+          nameCell.textContent = name;
+
+          const statusCell = document.createElement('td');
+          statusCell.textContent = keyStatus;
+
+          const toggleCell = document.createElement('td');
+          const toggleBtn = document.createElement('button');
+          toggleBtn.textContent = keyStatus === 'atFrontDesk' ? 'Pass to Staff' : 'Return to Front Desk';
+          toggleBtn.className = 'toggle-btn ' + (keyStatus === 'atFrontDesk' ? 'atFrontDesk' : 'withStaff');
+
+          toggleBtn.onclick = async () => {
+            const newStatus = keyStatus === 'atFrontDesk' ? 'withStaff' : 'atFrontDesk';
+            await update(ref(db, 'vehicles/' + name), { keyStatus: newStatus });
+            location.reload(); // Refresh for now — can replace with smarter update later
+          };
+
+          toggleCell.appendChild(toggleBtn);
+          row.appendChild(nameCell);
+          row.appendChild(statusCell);
+          row.appendChild(toggleCell);
+          tableBody.appendChild(row);
+        });
+      }
     }
-
-    const snap = await get(ref(db, 'users/' + user.uid));
-    const role = snap.val()?.role || '';
-    if (role !== 'fleetmaster') {
-      window.location.href = 'calendar.html';
-      return;
-    }
-
-    const vehiclesRef = ref(db, 'vehicles');
-    onValue(vehiclesRef, (snapshot) => {
-      const data = snapshot.val();
-      tableBody.innerHTML = '';
-
-      Object.entries(data).forEach(([vehicleName, info]) => {
-        const row = document.createElement('tr');
-        const nameCell = document.createElement('td');
-        const toggleCell = document.createElement('td');
-
-        nameCell.textContent = vehicleName;
-
-        const btn = document.createElement('button');
-        const status = info.keyStatus || 'atFrontDesk';
-
-        btn.textContent = status === 'atFrontDesk' ? 'At Front Desk' : 'With Staff';
-        btn.className = status === 'atFrontDesk' ? 'front' : 'with';
-
-        btn.onclick = async () => {
-          const newStatus = status === 'atFrontDesk' ? 'withStaff' : 'atFrontDesk';
-          await update(ref(db, `vehicles/${vehicleName}`), { keyStatus: newStatus });
-        };
-
-        toggleCell.appendChild(btn);
-        row.appendChild(nameCell);
-        row.appendChild(toggleCell);
-        tableBody.appendChild(row);
-      });
-    });
   });
 </script>
 
