--- a/calendar.html
+++ b/calendar.html
@@ -492,9 +492,22 @@ function initCalendar() {
   }
 
   // Convert date/time to timestamp
-  function toTimestamp(dateStr, timeStr) {
-    return new Date(`${dateStr}T${timeStr}`).getTime();
+function toTimestamp(dateStr, timeStr) {
+  const date = new Date(dateStr);
+  const [time, modifier] = timeStr.split(' ');
+  let [hours, minutes] = time.split(':').map(Number);
+
+  if (modifier === 'PM' && hours !== 12) {
+    hours += 12;
   }
+  if (modifier === 'AM' && hours === 12) {
+    hours = 0;
+  }
+
+  date.setHours(hours, minutes, 0, 0);
+  return date.getTime();
+}
+
 
   // Check for booking conflicts
 async function isBookingOverlapping(vehicleName, newStartTS, newEndTS) {
